--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,14 @@ html {
 
 
 body {
+  font-family: 'Rubik', sans-serif;
+  background-color: #fff;
+  font-size: 18px;
+  line-height: 28px;
+  color: #242A45;
+  padding-top: 68px;
+
+
 
 }
 .container {
@@ -18,4 +26,29 @@ body {
   padding-right: 20px;
   margin-left: auto;
   margin-right: auto;
+}
+.site_header {
+}
+.sitenav {
+  display: flex;
+  align-items: center;
+}
+.sitenav__list {
+  display: flex;
+  align-items: center;
+  margin-left: auto;
+  list-style: none;
+}
+.sitenav__list-item {
+  margin-right: 48px;
+  font-size: 13px;
+line-height: 17px;
+letter-spacing: 1.5px;
+}
+.button {
+  background: #FA5959;
+  box-shadow: 0px 8px 8px -4px rgba(73, 93, 207, 0.20012);
+  border-radius: 5px;
+  padding: 11px 33px;
+  color: #fff;
 }
