--- a/css/styles.css
+++ b/css/styles.css
@@ -36,14 +36,20 @@ body {
 .sitenav__list {
   display: flex;
   align-items: center;
+  margin: 0;
   margin-left: auto;
   list-style: none;
 }
 .sitenav__list-item {
   margin-right: 48px;
+
+}
+.sitenav__link {
+  text-decoration: none;
+  text-transform: uppercase;
   font-size: 13px;
-line-height: 17px;
-letter-spacing: 1.5px;
+  line-height: 17px;
+  letter-spacing: 1.5px;
 }
 .button {
   background: #FA5959;
